@@ -125,6 +125,33 @@ set expected [dict create {*}{
             }
         }
     }
+    x86_64-apple-darwin10.6 {
+        cookit-deps {
+            cookit-gui_raw {
+                /System/Library/Frameworks/CoreFoundation.framework/Versions/A/CoreFoundation
+                /System/Library/Frameworks/Security.framework/Versions/A/Security
+                /usr/lib/libSystem.B.dylib
+            }
+            cookit8-gui_raw {
+                /System/Library/Frameworks/CoreFoundation.framework/Versions/A/CoreFoundation
+                /System/Library/Frameworks/Security.framework/Versions/A/Security
+                /usr/lib/libSystem.B.dylib
+            }
+            lib*tk*.dylib   {
+                /System/Library/Frameworks/AppKit.framework/Versions/C/AppKit
+                /System/Library/Frameworks/ApplicationServices.framework/Versions/A/ApplicationServices
+                /System/Library/Frameworks/Carbon.framework/Versions/A/Carbon
+                /System/Library/Frameworks/Cocoa.framework/Versions/A/Cocoa
+                /System/Library/Frameworks/CoreFoundation.framework/Versions/A/CoreFoundation
+                /System/Library/Frameworks/CoreServices.framework/Versions/A/CoreServices
+                /System/Library/Frameworks/Foundation.framework/Versions/C/Foundation
+                /System/Library/Frameworks/IOKit.framework/Versions/A/IOKit
+                /System/Library/Frameworks/QuartzCore.framework/Versions/A/QuartzCore
+                /usr/lib/libSystem.B.dylib
+                /usr/lib/libobjc.A.dylib
+            }
+        }
+    }
     i686-w64-mingw32 {
         cookit-deps {
             cookit-gui_raw.exe {
